Added retained earnings line to income statment

--- a/ledger/templates/api/index.html
+++ b/ledger/templates/api/index.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col d-flex justify-content-between">
                         <div class="text-start">{{ account.account }}</div>
-                        <div class="text-end">${{ account.balance|floatformat:2|intcomma }}</div>
+                        <div class="text-end text-monospace">${{ account.balance|floatformat:2|intcomma }}</div>
                     </div>
                 </div>
                 {% endfor %}
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col d-flex justify-content-between">
                         <div class="text-start">Sub-total</div>
-                        <div class="text-end">${{ sub_values.total|floatformat:2|intcomma }}</div>
+                        <div class="text-end text-monospace">${{ sub_values.total|floatformat:2|intcomma }}</div>
                     </div>
                 </div>
                 <br>
