--- a/ledger/templates/api/index.html
+++ b/ledger/templates/api/index.html
@@ -1,52 +1,72 @@
-{% load static %}
-{% load humanize %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ledger</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="container">
-        <br><br>
-    <div class="col-md-6">
-        {% for type, type_values in balances.items %}
-            <h3>{{ type_values.name }}</h3>
-            {% for sub_type, sub_values in type_values.sub_types.items %}
-                <h5>{{ sub_values.name }}</h5>
-                {% for account in sub_values.accounts %}
-                <div class="row">
-                    <div class="col d-flex justify-content-between">
-                        <div class="text-start">{{ account.account }}</div>
-                        <div class="text-end text-monospace">${{ account.balance|floatformat:2|intcomma }}</div>
-                    </div>
-                </div>
+
+<head>
+    <!-- Other head elements -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://unpkg.com/htmx.org"></script>
+</head>
+
+
+<body>
+    <div class="container mt-5">
+        {% load tz %} <!-- Load the timezone template tags -->
+
+        <form method="post" hx-post="/" class="form-group">
+            {% csrf_token %}
+
+            <!-- Date Field -->
+            <div class="form-group">
+                <input type="date" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}"
+                       class="form-control"
+                       value="{{ form.date.value|default_if_none:today|date:'Y-m-d' }}"
+                       placeholder="{{ form.date.label }}">
+                {% for error in form.date.errors %}
+                    <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
-                <hr>
-                <div class="row">
-                    <div class="col d-flex justify-content-between">
-                        <div class="text-start">Sub-total</div>
-                        <div class="text-end text-monospace">${{ sub_values.total|floatformat:2|intcomma }}</div>
-                    </div>
-                </div>
-                <br>
-            {% endfor %}
-            <hr>
-            <div class="row">
-                <div class="col d-flex justify-content-between">
-                    <div class="text-start">Total</div>
-                    <div class="text-end">${{ type_values.total|floatformat:2|intcomma }}</div>
-                </div>
             </div>
-            <br>
-        {% endfor %}
-    </div>
-    <div class="col-md-6"></div>
+
+            <!-- Amount Field -->
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">$</span>
+                    </div>
+                    <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}"
+                           class="form-control"
+                           value="{{ form.amount.value|default_if_none:'' }}"
+                           placeholder="{{ form.amount.label }}">
+                </div>
+                {% for error in form.amount.errors %}
+                    <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
+            </div>
+
+            <!-- Description Field -->
+            <div class="form-group">
+                <input type="text" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}"
+                       class="form-control"
+                       value="{{ form.description.value|default_if_none:'' }}"
+                       placeholder="{{ form.description.label }}">
+                {% for error in form.description.errors %}
+                    <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
+            </div>
+
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-primary">Save</button>
+        </form>
 
     </div>
-  </body>
-</html>
+
+    <div id="transaction-result" class="mt-3">
+        {{ success }}
+    </div>
+
+    <!-- Script for CSRF Token with htmx -->
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        });
+    </script>
+</body>
