--- a/ledger/templates/api/index.html
+++ b/ledger/templates/api/index.html
@@ -9,54 +9,61 @@
 
 
 <body>
-    <div class="container mt-5">
+    <div class="container">
 
-        <h2>Wallet transactions</h2>
-
-        <form method="post" hx-post="/" hx-swap="innerHTML" hx-target="#transaction-result" class="form-group">
-            {% csrf_token %}
-
-            <!-- Date Field -->
-            <div class="form-group">
-                <input type="date" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}"
-                       class="form-control"
-                       value="{{ form.date.value|default_if_none:today|date:'Y-m-d' }}"
-                       placeholder="{{ form.date.label }}">
-                {% for error in form.date.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
+        <div class="row">
+            <div class="col">
+                <h2>Wallet transactions</h2>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <form method="post" hx-post="/" hx-swap="innerHTML" hx-target="#transaction-result" class="form-group">
+                    {% csrf_token %}
 
-            <!-- Amount Field -->
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">$</span>
+                    <!-- Date Field -->
+                    <div class="form-group">
+                        <input type="date" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}"
+                            class="form-control"
+                            value="{{ form.date.value|default_if_none:today|date:'Y-m-d' }}"
+                            placeholder="{{ form.date.label }}">
+                        {% for error in form.date.errors %}
+                            <div class="alert alert-danger">{{ error }}</div>
+                        {% endfor %}
                     </div>
-                    <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}"
-                           class="form-control"
-                           value="{{ form.amount.value|default_if_none:'' }}"
-                           placeholder="{{ form.amount.label }}">
-                </div>
-                {% for error in form.amount.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
-            </div>
 
-            <!-- Description Field -->
-            <div class="form-group">
-                <input type="text" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}"
-                       class="form-control"
-                       value="{{ form.description.value|default_if_none:'' }}"
-                       placeholder="{{ form.description.label }}">
-                {% for error in form.description.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
-            </div>
+                    <!-- Amount Field -->
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">$</span>
+                            </div>
+                            <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}"
+                                class="form-control"
+                                value="{{ form.amount.value|default_if_none:'' }}"
+                                placeholder="{{ form.amount.label }}">
+                        </div>
+                        {% for error in form.amount.errors %}
+                            <div class="alert alert-danger">{{ error }}</div>
+                        {% endfor %}
+                    </div>
 
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+                    <!-- Description Field -->
+                    <div class="form-group">
+                        <input type="text" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}"
+                            class="form-control"
+                            value="{{ form.description.value|default_if_none:'' }}"
+                            placeholder="{{ form.description.label }}">
+                        {% for error in form.description.errors %}
+                            <div class="alert alert-danger">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </form>
+            </div>
+        </div>
 
     </div>
 
