--- a/ledger/templates/api/index.html
+++ b/ledger/templates/api/index.html
@@ -1,5 +1,7 @@
 {% extends "api/base.html" %}
 {% block extra_head %}
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 <script>
     $(document).ready(function() {
         $('.select2').select2({
