--- a/ledger/templates/api/transactions-table.html
+++ b/ledger/templates/api/transactions-table.html
@@ -1,3 +1,11 @@
+<style>
+    .table-sm th, .table-sm td {
+        padding: .3rem; /* smaller padding */
+        white-space: nowrap; /* prevents wrapping */
+        font-size: 0.75rem; /* smaller font-size */
+    }
+</style>
+
 <table class="table table-hover table-sm">
     <thead>
         <tr>
