--- a/ledger/templates/api/transactions-list.html
+++ b/ledger/templates/api/transactions-list.html
@@ -6,7 +6,7 @@
 <script>
 function initializeSelect2() {
     $('.select2').select2({
-        placeholder: "Select an account",
+        placeholder: "Account",
         allowClear: true
     });
 }
@@ -20,6 +20,27 @@ $(document).ready(function() {
 });
 
 </script>
+
+<style>
+    .form-control, .select2-container--default .select2-selection--single {
+        width: 100%; /* Ensure full-width for all form controls */
+    }
+
+    .select2-container--default .select2-selection--single {
+    border: 1px solid #ced4da; /* Match Bootstrap's border color */
+    border-radius: 0.25rem; /* Match Bootstrap's border radius */
+    height: calc(1.5em + 0.75rem + 2px); /* Match Bootstrap's height */
+    padding: 0.375rem 0.75rem; /* Match Bootstrap's padding */
+    }
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 1.5; /* Match Bootstrap's line height */
+    padding-left: 0; /* Remove padding-left */
+    padding-right: 0; /* Remove padding-right */
+    }
+    .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: calc(1.5em + 0.75rem + 2px); /* Match Bootstrap's height */
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -28,7 +49,7 @@ $(document).ready(function() {
 
     {% include "api/transactions-filter-form.html" %}
 
-    <div id="transactions-table" class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+    <div id="transactions-table" class="table-responsive" style="max-height: 200px; overflow-y: auto;">
     {% include "api/transactions-table.html" %}
     </div>
 
