--- a/ledger/templates/api/base.html
+++ b/ledger/templates/api/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container" class="container">
         {% block content %}{% endblock %}
     </div>
 
