--- a/ledger/templates/api/transactions-filter-form.html
+++ b/ledger/templates/api/transactions-filter-form.html
@@ -1,4 +1,4 @@
-<form method="get" hx-get="{% url 'transactions-table' %}" hx-target="#transactions-table" hx-trigger="submit" class="mb-3">
+<form id="transactions-filter-form" method="get" hx-get="{% url 'transactions-table' %}" hx-target="#table-and-form" hx-trigger="submit" class="mb-3">
     <div class="row">
         <!-- Date From Field -->
         <div class="col-md-3">
