Fixed dumb bug with target swap and updated the JEI form to prefill suggested accounts and values

--- a/ledger/templates/api/journal-entry-item-form.html
+++ b/ledger/templates/api/journal-entry-item-form.html
@@ -1,4 +1,13 @@
-<form id="journal-entry-form" method="post" class="form-horizontal" hx-post="{% url 'create-journal-entry-items' transaction_id %}" #hx-target="#table-and-form">
+<form
+    id="journal-entry-form"
+    method="post"
+    class="form-horizontal"
+    hx-post="{% url 'create-journal-entry-items' transaction_id %}"
+    hx-target="#table-and-form"
+    hx-trigger="submit"
+    hx-include="#transactions-filter-form"
+>
+
     {% csrf_token %}
 
     <div class="row">
