--- a/ledger/templates/api/transactions-list.html
+++ b/ledger/templates/api/transactions-list.html
@@ -48,10 +48,10 @@ $(document).ready(function() {
     <h2>Transactions List</h2>
 
     {% include "api/transactions-filter-form.html" %}
-
     <div id="table-and-form">
         {% include "api/transactions-content.html" %}
     </div>
+</div>
 
 </div>
 {% endblock %}
