--- a/ledger/templates/api/transactions-list.html
+++ b/ledger/templates/api/transactions-list.html
@@ -21,25 +21,60 @@ $(document).ready(function() {
 </script>
 
 <style>
-    .form-control, .select2-container--default .select2-selection--single {
-        width: 100%; /* Ensure full-width for all form controls */
+    .form-sm .form-control {
+        padding: .3rem; /* smaller padding */
+        font-size: 0.75rem; /* smaller font-size */
+    }
+    .form-sm .input-group-text {
+        padding: .3rem .5rem; /* smaller padding */
+        font-size: 0.75rem; /* smaller font-size */
+    }
+    .form-sm .row {
+        margin-bottom: .5rem; /* less space between rows */
+    }
+    .form-sm h3 {
+        font-size: 1rem; /* smaller heading */
+    }
+    .form-sm .btn {
+        padding: .25rem .5rem; /* smaller button padding */
+        font-size: 0.75rem; /* smaller font-size */
     }
 
     .select2-container--default .select2-selection--single {
-    border: 1px solid #ced4da; /* Match Bootstrap's border color */
-    border-radius: 0.25rem; /* Match Bootstrap's border radius */
-    height: calc(1.5em + 0.75rem + 2px); /* Match Bootstrap's height */
-    padding: 0.375rem 0.75rem; /* Match Bootstrap's padding */
+        font-size: 0.75rem; /* Smaller font size for select input */
+        height: calc(1.5em + .5rem + 2px); /* Adjusted height for better text alignment */
+        padding: 0.25rem 0.5rem; /* Adjust padding to vertically center the text */
     }
+
     .select2-container--default .select2-selection--single .select2-selection__rendered {
-    line-height: 1.5; /* Match Bootstrap's line height */
-    padding-left: 0; /* Remove padding-left */
-    padding-right: 0; /* Remove padding-right */
+        line-height: 1.5em; /* Line height to match the height of the select box */
+        padding: 0; /* Remove additional padding */
     }
+
     .select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: calc(1.5em + 0.75rem + 2px); /* Match Bootstrap's height */
+        height: calc(1.5em + .5rem); /* Adjusted height to match the select box */
+        top: 50%; /* Position arrow in the middle vertically */
+        transform: translateY(-50%); /* Adjust transformation to center the arrow */
+    }
+
+    /* Adjustments for when select2 is open to keep font size consistent */
+    .select2-container--open .select2-dropdown--below,
+    .select2-container--default .select2-results__option {
+        font-size: 0.75rem;
+    }
+
+    /* Additional styles for Select2 search box within the dropdown */
+    .select2-container--default .select2-search--dropdown .select2-search__field {
+        font-size: 0.75rem;
+    }
+
+    /* Style adjustments for Select2 multi-value tokens */
+    .select2-container--default .select2-selection--multiple .select2-selection__choice {
+        font-size: 0.75rem;
+        line-height: 1.5em; /* Adjust line height for multi-value tokens */
     }
 </style>
+
 {% endblock %}
 
 {% block content %}
@@ -48,6 +83,7 @@ $(document).ready(function() {
     <h2>Transactions List</h2>
 
     {% include "api/transactions-filter-form.html" %}
+
     <div id="table-and-form">
         {% include "api/transactions-content.html" %}
     </div>
