Refactored formset saving

--- a/ledger/templates/api/transactions-table.html
+++ b/ledger/templates/api/transactions-table.html
@@ -6,6 +6,21 @@
     }
 </style>
 
+<script>
+    $(document).ready(function(){
+        $('.clickable-row').click(function() {
+            // Check if the clicked row is already highlighted
+            if (!$(this).hasClass('table-active')) {
+                // Remove the highlighted class from all other rows
+                $('.clickable-row').removeClass('table-active');
+
+                // Add the highlighted class to this row
+                $(this).addClass('table-active');
+            }
+        });
+    });
+</script>
+
 <table class="table table-hover table-sm">
     <thead>
         <tr>
