--- a/ledger/templates/api/journal-entry-item-form.html
+++ b/ledger/templates/api/journal-entry-item-form.html
@@ -1,3 +1,5 @@
+{% load math_filters %}
+
 <form
     id="journal-entry-form"
     method="post"
@@ -24,30 +26,19 @@
             <div class="row">
                 <div class="col-md-6">
                     {{ form.id }}
-                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}">
+                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}" tabindex="{{ forloop.counter|multiply:4|add:1 }}">
                         {% for option in form.account %}
                             {{ option }}
                         {% endfor %}
                     </select>
                 </div>
                 <div class="col-md-6">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">$</span>
-                        </div>
-                        <input
-                            type="text"
-                            class="form-control"
-                            name="{{ form.amount.html_name }}"
-                            id="{{ form.amount.auto_id }}"
-                            value="{% if form.amount.value == None or form.amount.value == 0 %}0.00{% else %}{{ form.amount.value }}{% endif %}"
-                        />
-                    </div>
+                    <!-- Adjust tabindex for amount -->
+                    <input type="text" class="form-control" name="{{ form.amount.html_name }}" id="{{ form.amount.auto_id }}" value="{{ form.amount.value|default_if_none:'0.00' }}" tabindex="{{ forloop.counter|multiply:4|add:2 }}">
                 </div>
             </div>
             {% endfor %}
         </div>
-
 
         <!-- Credit Formset Column -->
         <div class="col-md-6">
@@ -57,25 +48,16 @@
             <div class="row">
                 <div class="col-md-6">
                     {{ form.id }}
-                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}">
+                    <!-- Adjust tabindex for credit accounts -->
+                    <select class="form-control select2" name="{{ form.account.html_name }}" id="{{ form.account.auto_id }}" tabindex="{{ forloop.counter|multiply:4|add:3 }}">
                         {% for option in form.account %}
                             {{ option }}
                         {% endfor %}
                     </select>
                 </div>
                 <div class="col-md-6">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">$</span>
-                        </div>
-                        <input
-                            type="text"
-                            class="form-control"
-                            name="{{ form.amount.html_name }}"
-                            id="{{ form.amount.auto_id }}"
-                            value="{% if form.amount.value == None or form.amount.value == 0 %}0.00{% else %}{{ form.amount.value }}{% endif %}"
-                        />
-                    </div>
+                    <!-- Adjust tabindex for credit amounts -->
+                    <input type="text" class="form-control" name="{{ form.amount.html_name }}" id="{{ form.amount.auto_id }}" value="{{ form.amount.value|default_if_none:'0.00' }}" tabindex="{{ forloop.counter|multiply:4|add:4 }}">
                 </div>
             </div>
             {% endfor %}
