--- a/ledger/templates/api/components/transactions-filter-form.html
+++ b/ledger/templates/api/components/transactions-filter-form.html
@@ -1,7 +1,7 @@
 <form id="transactions-filter-form" method="get" hx-get="{% url 'transactions-table' %}" hx-target="#table-and-form" hx-trigger="submit" class="mb-3 form-sm">
     <div class="row">
         <!-- Date From Field -->
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="form-group">
                 <label for="id_date_from">Date From</label>
                 <input type="date" name="date_from" id="id_date_from" class="form-control"
@@ -10,7 +10,7 @@
         </div>
 
         <!-- Date To Field -->
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="form-group">
                 <label for="id_date_to">Date To</label>
                 <input type="date" name="date_to" id="id_date_to" class="form-control"
@@ -52,6 +52,19 @@
                     {% for choice in filter_form.transaction_type.field.choices %}
                         <option value="{{ choice.0 }}" {% if choice.0 in filter_form.transaction_type.value %}selected{% endif %}>
                             {{ choice.1 }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="id_has_linked_transaction">Linked</label>
+                <select name="has_linked_transaction" id="id_has_linked_transaction" class="form-control">
+                    {% for option_value, option_label in filter_form.has_linked_transaction.field.choices %}
+                        <option value="{{ option_value }}" {% if option_value == filter_form.has_linked_transaction.value %}selected{% endif %}>
+                            {{ option_label }}
                         </option>
                     {% endfor %}
                 </select>
