Modified transactions linking

--- a/ledger/templates/api/components/transactions-content.html
+++ b/ledger/templates/api/components/transactions-content.html
@@ -1,4 +1,5 @@
 
+{% include "api/components/clickable-row-script.html" %}
 {% include "api/components/transactions-table.html" %}
 
 <div id="journal-entry-item-form">
