--- a/ledger/templates/api/transactions-linking.html
+++ b/ledger/templates/api/transactions-linking.html
@@ -30,7 +30,7 @@
 <div class="container mt-4">
     <h2>Linking</h2>
 
-    {% include "api/components/transactions-filter-form.html" %}
+    {{ filter_form }}
 
     <div id="table-and-form">
         {% include "api/components/two-row-select-script.html" %}
