--- a/ledger/templates/api/base.html
+++ b/ledger/templates/api/base.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+
+    {% include "api/components/nav.html" %}
     <div id="container" class="container">
         {% block content %}{% endblock %}
     </div>
