Changed templating and nav to only load container, not whole page

--- a/ledger/templates/api/components/nav.html
+++ b/ledger/templates/api/components/nav.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item {% if request.resolver_match.url_name == 'transactions-list' %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'transactions-list' %}">Journal Entries</a>
+                    <a class="nav-link" href="{% url 'transactions-list' %}" hx-get="{% url 'transactions-list' %}" hx-target="#container">Journal Entries</a>
                 </li>
                 <li class="nav-item {% if request.resolver_match.url_name == 'link-transactions' %}active{% endif %}">
-                    <a class="nav-link" href="{% url 'link-transactions' %}">Link Transactions</a>
+                    <a class="nav-link" href="{% url 'link-transactions' %}" hx-get="{% url 'link-transactions' %}" hx-target="#container">Link Transactions</a>
                 </li>
             </ul>
         </div>
