Added TaxCharge table

--- a/ledger/templates/api/base.html
+++ b/ledger/templates/api/base.html
@@ -85,6 +85,13 @@
             font-size: 0.75rem;
             line-height: 1.5em; /* Adjust line height for multi-value tokens */
         }
+
+        .table-sm th, .table-sm td {
+            padding: .3rem; /* smaller padding */
+            white-space: nowrap; /* prevents wrapping */
+            font-size: 0.75rem; /* smaller font-size */
+        }
+
     </style>
 
 
