--- a/ledger/templates/api/components/tax-table.html
+++ b/ledger/templates/api/components/tax-table.html
@@ -1,28 +1,44 @@
-<table class="table table-striped table-sm">
-    <thead>
-        <tr>
-            <th>Type</th>
-            <th>Transaction</th>
-            <th>Date</th>
-            <th>Amount</th>
-            <th>Income</th>
-            <th>Tax Rate</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for tax_charge in tax_charges %}
+<div class="row">
+    <div class="col">
+    <table class="table table-hover table-sm">
+        <thead>
             <tr>
-                <td>{{ tax_charge.type }}</td>
-                <td>{{ tax_charge.transaction }}</td>
-                <td>{{ tax_charge.date }}</td>
-                <td>{{ tax_charge.amount }}</td>
-                <td>{{ tax_charge.taxable_income }}</td>
-                <td>{{ tax_charge.tax_rate }}</td>
+                <th>Type</th>
+                <th>Transaction</th>
+                <th>Date</th>
+                <th>Amount</th>
+                <th>Income</th>
+                <th>Tax Rate</th>
             </tr>
-        {% empty %}
-            <tr>
-                <td colspan="4">No tax charges found.</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% for tax_charge in tax_charges %}
+                <tr class="clickable-row" hx-get="{% url 'edit-tax-charge' pk=tax_charge.pk %}" hx-target="#form-container">
+                    <td>{{ tax_charge.type }}</td>
+                    <td>{{ tax_charge.transaction }}</td>
+                    <td>{{ tax_charge.date }}</td>
+                    <td>{{ tax_charge.amount }}</td>
+                    <td>{{ tax_charge.taxable_income }}</td>
+                    <td>{{ tax_charge.tax_rate }}</td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="6">No tax charges found.</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+    <button
+        id="clear-button"
+        class="btn btn-primary"
+        hx-get="{% url 'create-tax-charge' %}"
+        hx-target="#form-container"
+    >Clear</button>
+    </div>
+</div>
+{% include "api/components/clickable-row-script.html" %}
