--- a/ledger/templates/api/taxes.html
+++ b/ledger/templates/api/taxes.html
@@ -1,3 +1,13 @@
     <h2>Taxes</h2>
 
-    {{ tax_charge_table }}
+    <div class="row">
+        <div class="col">
+        {{ tax_charge_table }}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+        <div id="form-container"></div>
+        </div>
+    </div>
