--- a/ledger/templates/api/components/tax-table.html
+++ b/ledger/templates/api/components/tax-table.html
@@ -35,7 +35,7 @@
     <div class="col">
     <button
         id="clear-button"
-        class="btn btn-primary"
+        class="btn btn-primary btn-sm"
         hx-get="{% url 'create-tax-charge' %}"
         hx-target="#form-container"
     >Clear</button>
