--- a/ledger/templates/api/taxes.html
+++ b/ledger/templates/api/taxes.html
@@ -1,5 +1,7 @@
     <h2>Taxes</h2>
 
+    {{ filter_form }}
+
     <div id="table-and-form">
         {% include "api/components/taxes-content.html" %}
     </div>
