Can submit form in reconciliations page

--- a/ledger/templates/api/base.html
+++ b/ledger/templates/api/base.html
@@ -105,7 +105,12 @@
         {% block content %}{% endblock %}
     </div>
 
-    {% block extra_js %}{% endblock %}
-</body>
 
+</body>
+<script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    });
+</script>
+{% block extra_js %}{% endblock %}
 </html>
