Added plug functionality

--- a/ledger/templates/api/components/reconciliation-table.html
+++ b/ledger/templates/api/components/reconciliation-table.html
@@ -38,7 +38,7 @@
                         </div>
                     </td>
                     <td>
-                        <button type="submit" class="btn btn-secondary">Plug</button>
+                        <button type="submit" name="plug" value="{{ form.instance.id }}" class="btn btn-secondary">Plug</button>
                     </td>
                 </tr>
             {% endfor %}
