added ability to generate reconciliations

--- a/ledger/templates/api/base.html
+++ b/ledger/templates/api/base.html
@@ -52,6 +52,14 @@
             font-size: 0.75rem; /* smaller font-size */
         }
 
+        .input-group-sm .input-group-prepend .input-group-text {
+            padding: 2px 4px; /* Match the padding to the input field */
+            font-size: 0.8em; /* Match the font size to the input field */
+            /* You may need to adjust the height if it's not automatically aligning */
+            height: calc(1.7rem + 1px); /* This is Bootstrap's default height for small form controls, adjust the calc() as necessary */
+        }
+
+
         .select2-container--default .select2-selection--single {
             font-size: 0.75rem; /* Smaller font size for select input */
             height: calc(1.5em + .5rem + 2px); /* Adjusted height for better text alignment */
