--- a/ledger/templates/api/components/reconciliation-table.html
+++ b/ledger/templates/api/components/reconciliation-table.html
@@ -24,7 +24,7 @@
                     <td>
                         <div class="form-row">
                             <div class="col">
-                                <div class="input-group">
+                                <div class="input-group input-group-sm">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">$</span>
                                     </div>
